<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.udacity</groupId>
  <artifactId>Udasecurity</artifactId>
  <version>1.0</version>
  <packaging>pom</packaging>

  <name>Udasecurity</name>
  <url>http://maven.apache.org</url>

  <modules>
    <module>ImageService</module>
    <module>SecurityService</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>9</maven.compiler.source>
    <maven.compiler.target>9</maven.compiler.target>
  </properties>

  <build>
        <!-- <sourceDirectory>SecurityService/src/main/java</sourceDirectory>
        <testSourceDirectory>SecurityService/src/test/java</testSourceDirectory> -->
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
        </plugin>
         <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.2</version>
          <configuration>
            <argLine>
              --add-opens SecurityService/security.service=ALL-UNNAMED
            </argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>